# rust-tracer

./: Cargo.toml  scene.yml
src/: buffer.rs  config.rs  lib.rs  main.rs  window.rs
src/sub_modules/: config.rs  mod.rs  tracer.rs  window.rs
src/tracer/: mod.rs
src/tracer/colour/: mod.rs
src/tracer/geom/: mod.rs  plane.rs  sphere.rs
